2007-08-20  Emmanuele Bassi  <ebassi@openedhand.com>

	* configure.ac: Post release bump to 0.4.2.

2007-08-20  Emmanuele Bassi  <ebassi@openedhand.com>

	* README:
	* configure.ac: Bump up to 0.4.1 and require the new stable relase
	of Clutter

	* clutter/clutter-base.defs: Add new API.

	* clutter/clutter.override: Ignore clutter_effect_depth() and
	override clutter_threads_enter() to release the Python interpreter
	lock before acquiring the Clutter lock and reacquire it afterwards.

2007-08-08  Emmanuele Bassi  <ebassi@openedhand.com>

	Backport from trunk

	* clutter/clutter-base.defs: Add fake constructors for the boxes
	types we wrap.

	* clutter/clutter-actor.override: Override the set_geometry() and
	get_geometry() methods to return and accept a 4-tuple.

	* clutter/pyclutter.[ch]: Add a conversion function for PyObject
	to ClutterGeometry.

2007-08-07  Emmanuele Bassi  <ebassi@openedhand.com>

	* configure.ac:
	* README:
	* NEWS: Update and release 0.4.0 (see svn log for details).

2007-03-26  Emmanuele Bassi  <ebassi@openedhand.com>

	* examples/Makefile.am:
	* examples/hello.py: Add 'hello world' example.

2007-01-18  Emmanuele Bassi  <ebassi@openedhand.com>

	* configure.ac: Bump to 0.3.0.

2007-01-18  Emmanuele Bassi  <ebassi@openedhand.com>

	* configure.ac: Bump to 0.2.0.

	* configure.ac:
	* Makefile.am: Remove clutter-gst from the build
	until it's fixed.

	* README: Add README.

2007-01-18  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter-gst/cluttergst.defs:
	* clutter-gst/cluttergst.override:
	* clutter-gst/cluttergstmodule.c:
	* clutter-gst/Makefile.am: Update clutter.gst module for
	the ClutterGst library.

	* Makefile.am:
	* configure.ac: Drop the ClutterGtk wrapper from the build;
	compile ClutterGst wrapper conditionally if the clutter-gst
	library is installed; require the newly release clutter 0.2.

	* clutter/clutter-base.defs: Add missing methods.

	* examples/behave.py: Add BehaviourScale object.
