@@ -1,5 +1,14 @@
 2007-08-20  Emmanuele Bassi  <ebassi@openedhand.com>
 
+	* clutter/clutter.override: Override clutter.init() and pass the
+	command line arguments from sys.argv.
+
+	* clutter/cluttermodule.c:
+	* clutter/__init__.py: Lazily initialise the clutter module, instead
+	of initialising when loading the shared library.
+
+2007-08-20  Emmanuele Bassi  <ebassi@openedhand.com>
+
 	* configure.ac: Post release bump to 0.4.2.
 
 2007-08-20  Emmanuele Bassi  <ebassi@openedhand.com>
